=== 3.0

Special thanks to Thierry Lambert for massive improvements to RDoc.

* Major enhancements
  * Ruby 1.8.6 is no longer supported by RDoc.
  * RDoc now converts input files to a single encoding specified by
    <tt>--encoding</tt>.  See RDoc::RDoc and RDoc::Options#encoding.
    <tt>--encoding</tt> is now preferred over <tt>--charset</tt>
  * RDoc now supports a <tt>--coverage-report</tt> flag (also <tt>-C</tt>)
    that outputs a report on items lacking documentation.
  * Templates (<tt>rdoc -T</tt>) are now checked for existence in
    RDoc::Options.  Generator authors can now use RDoc::Options#template_dir
    which is the full path to the template directory.
  * Added support for class aliases.  Patch by Thierry Lambert.
  * Improved merging of classes and modules across multiple files including
    more accurate documentation statistics.  Patch by Thierry Lambert.
  * Improved handling of method aliases.  Patch by Thierry Lambert.
  * Improved handling of visibility of RDoc code objects.  Patch by Thierry
    Lambert.
  * RDoc::Attr#type is now RDoc::Attr#definition.  Patch by Thierry Lambert.
  * Removed TimeConstantMethods
* Minor enhancements
  * Added rdoc arguments <tt>--dry-run</tt>, <tt>--all</tt>,
    <tt>--visibility</tt>, <tt>--force-output</tt>, <tt>--hyperlink-all</tt>.
    Patch by Thierry Lambert.
  * RDoc::Markup::FormatterTestCase has been expanded.  Patch by Thierry
    Lambert.
  * RDoc::Markup::TextFormatterTestCase has been extracted from RDoc tests.
    Patch by Thierry Lambert.
  * Various RDoc::Parser::Ruby enhancements.  Patch by Thierry Lambert.
  * Various RDoc::Markup::Parser enhancements.  Patch by Thierry Lambert.
  * RDoc::Parser::binary? is more robust now that it uses Encoding.
  * Deprecated rdoc arguments are now explicitly mentioned in rdoc command
    output.  Patch by Thierry Lambert.
  * Constant values are formatted more accurately.  Patch by Thierry Lambert.