@@ -7,8 +7,8 @@ Special thanks to Thierry Lambert for massive improvements to RDoc.
   * RDoc now converts input files to a single encoding specified by
     <tt>--encoding</tt>.  See RDoc::RDoc and RDoc::Options#encoding.
     <tt>--encoding</tt> is now preferred over <tt>--charset</tt>
-  * RDoc now supports a <tt>--coverage-report</tt> flag (also <tt>-C</tt>)
-    that outputs a report on items lacking documentation.
+  * RDoc now supports a <tt>--coverage-report</tt> flag (also <tt>-C</tt> and
+    <tt>--dcov</tt>) that outputs a report on items lacking documentation.
   * Templates (<tt>rdoc -T</tt>) are now checked for existence in
     RDoc::Options.  Generator authors can now use RDoc::Options#template_dir
     which is the full path to the template directory.
@@ -20,6 +20,7 @@ Special thanks to Thierry Lambert for massive improvements to RDoc.
     Lambert.
   * RDoc::Attr#type is now RDoc::Attr#definition.  Patch by Thierry Lambert.
   * Removed TimeConstantMethods
+  * RDoc now calls ::new instead of ::for on generators.
 * Minor enhancements
   * Added rdoc arguments <tt>--dry-run</tt>, <tt>--all</tt>,
     <tt>--visibility</tt>, <tt>--force-output</tt>, <tt>--hyperlink-all</tt>.
